# salt-compressor

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
misc/: .csh_alias  csh_alias
src/: cli.yml  main.rs  tests.rs
testdata/: array.json  array_weird.json  bool.json  command.json  command_weird.json  duplicate_keys_hosts.json  highstate_is_already_running.json  no_ret_array.json  number_as_ret.json  old_new_values_in_ret.json  only_failed_hosts.json  only_failed_hosts2.json  salt-compressor_1493031538.json  salt-compressor_1498298195.json  salt-compressor_1498298292.json  string.json
