[package]
name = "salt-compressor"
version = "0.4.1"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]
description = "Compress the output of saltstack-runs to make it easier to review changes that happen to a lot of servers."
homepage = "https://github.com/AlexanderThaller/salt-compressor"
repository = "https://github.com/AlexanderThaller/salt-compressor"
readme = "README.md"
keywords = ["saltstack", "ops", "opsworks", "automation", "tool"]
license = "MIT"

[badges]
travis-ci = { repository = "AlexanderThaller/salt-compressor", branch = "master" }

[dependencies]
colored = "1"
log = "0.3"
loggerv = "0.3"
regex = "0.2"
serde_json = "1"
time = "0.1"

[dependencies.clap]
version = "2"
features = ["yaml"]
