[package]
name = "salt-compressor"
version = "0.4.2"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]
description = "Compress the output of saltstack-runs to make it easier to review changes that happen to a lot of servers."
homepage = "https://github.com/AlexanderThaller/salt-compressor"
repository = "https://github.com/AlexanderThaller/salt-compressor"
readme = "README.md"
keywords = ["saltstack", "ops", "opsworks", "automation", "tool"]
license = "MIT"

[badges]
travis-ci = { repository = "AlexanderThaller/salt-compressor", branch = "master" }

[dependencies]
colored = "1"
log = "0.4"
loggerv = "0.7"
regex = "1"
serde_json = "1"
chrono = "0.4"

[dependencies.clap]
version = "2"
features = ["yaml"]
